--- a/index.html
+++ b/index.html
@@ -1,12 +1,59 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="dist/style.css">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>DannaCode. || Conception Web - Maintenance - Référencement</title>
+        <meta name="author" content="DannaCode.">
+        <meta name="description" content="DannaCode. || Votre solution web tout-en-un : conception de sites (vitrine, e-commerce, landing page), création d'applications avec espace membre, génération de leads, maintenance, et référencement. Simplifiez votre digital avec notre expertise.">
+        <meta name="keywords" content="Conception de sites web, Site vitrine, Site e-commerce, Landing page, Application web, Espace membre, Génération de leads, Maintenance web, Référencement SEO, Développement web, Web design, Expérience utilisateur (UX), Interface utilisateur (UI),Création digitale, Stratégie web, Solutions numériques, Optimisation de site, Réactivité mobile, Design moderne, Performance web">
+        <meta name="theme-color" content="#06373A" />
+        <!-- TailwindCSS -->
+        <link rel="stylesheet" href="assets/dist/style.css">
+        <!-- Favicon -->
+        <link rel="apple-touch-icon" sizes="180x180" href="assets/images/Logo.png" />
+        <link rel="icon" type="image/png" sizes="32x23" href="assets/images/Logo.png" />
+        <link rel="icon" type="image/png" sizes="16x11" href="assets/images/Logo.png" />
+        <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
+        <!-- Font-family -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Hurricane&family=Inter&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
+        <!-- Cookie -->
+        <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
+    </head>
+    <body class="bg-bodyDanna">
+        <header class="w-full bg-navDanna border-b border-gray-400">
+            <nav class="fixed top-0 z-20 p-4 w-full grid grid-cols-none shadow-sm bg-navDanna md:max-w-8xl md:grid-cols-menu md:shadow-none md:relative md:mx-auto">
+                
+                <div class="flex justify-between items-center md:justify-center">
+                    <a href="">
+                        <img src="assets/images/DannaCode.png" alt="Logo DannaCode" class="w-12">
+                    </a>
+                    <button class="logo-button icone-toggle bg-navDanna rounded-md p-2  ring-1 ring-flashDanna ring-opacity-20 md:hidden">
+                        <span class="sr-only">Ouvrir le menu principal</span>
+                        <img src="assets/images/menu.svg" alt="Icône hamberger" class="h-6 w-6 ">
+                    </button>
+                </div>
+
+                <ul class="toggle-menu hidden px-1 pt-6 flex-col md:flex md:flex-row md:space-x-10 md:pt-0 md:w-auto md:items-center md:justify-start">
+                    <li class="py-2 text-center border-t border-gray-200 md:border-0">
+                        <a href="" class="font-medium text-lg text-zinc-100 border-b-2 border-flashDanna">Accueil</a>
+                    </li>
+                    <li class="py-2 text-center md:border-0">
+                        <a href="services/" class="font-medium text-lg text-zinc-100 ">Services</a>
+                    </li>
+                    <li class="py-2 text-center md:border-0">
+                        <a href="contact/" class="font-medium text-lg text-zinc-100">Contact</a>
+                    </li>
+                </ul>
+
+                <div class="menu-items hidden justify-center items-center mt-6 md:mt-0 md:justify-end md:flex">
+                    <a href="#" class="hidden px-6 py-2 font-medium text-flashDanna hover:text-green-500 text-center w-40 md:flex">Obtenir un devis gratuit</a>
+                </div>
+            </nav>
+        </header>
+      <script src="./assets/js/script.js"></script>
+    </body>
 </html>
