--- a/demande-de-devis/index.html
+++ b/demande-de-devis/index.html
@@ -10,12 +10,12 @@
         <meta name="keywords" content="Conception de sites web, Site vitrine, Site e-commerce, Landing page, Application web, Espace membre, Génération de leads, Maintenance web, Référencement SEO, Développement web, Web design, Expérience utilisateur (UX), Interface utilisateur (UI),Création digitale, Stratégie web, Solutions numériques, Optimisation de site, Réactivité mobile, Design moderne, Performance web">
         <meta name="theme-color" content="#06373A" />
         <!-- TailwindCSS -->
-        <link rel="stylesheet" href="assets/dist/style.css">
+        <link rel="stylesheet" href="../assets/dist/style.css">
         <!-- Favicon -->
-        <link rel="apple-touch-icon" sizes="180x180" href="assets/images/Logo.png" />
-        <link rel="icon" type="image/png" sizes="32x23" href="assets/images/Logo.png" />
-        <link rel="icon" type="image/png" sizes="16x11" href="assets/images/Logo.png" />
-        <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
+        <link rel="apple-touch-icon" sizes="180x180" href="../assets/images/Logo.png" />
+        <link rel="icon" type="image/png" sizes="32x23" href="../assets/images/Logo.png" />
+        <link rel="icon" type="image/png" sizes="16x11" href="../assets/images/Logo.png" />
+        <link rel="icon" type="image/x-icon" href="../assets/images/favicon.ico">
         <!-- Font-family -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,11 +29,11 @@
                 
                 <div class="flex justify-between items-center md:justify-center">
                     <a href="">
-                        <img src="assets/images/DannaCode.png" alt="Logo DannaCode" class="w-12">
+                        <img src="../assets/images/DannaCode.png" alt="Logo DannaCode" class="w-12">
                     </a>
                     <button class="logo-button icone-toggle bg-navDanna rounded-md p-2  ring-1 ring-flashDanna ring-opacity-20 md:hidden">
                         <span class="sr-only">Ouvrir le menu principal</span>
-                        <img src="assets/images/menu.svg" alt="Icône hamberger" class="h-6 w-6 ">
+                        <img src="../assets/images/menu.svg" alt="Icône hamberger" class="h-6 w-6 ">
                     </button>
                 </div>
 
@@ -42,7 +42,7 @@
                         <a href="" class="font-medium text-lg text-zinc-100 border-b-2 border-flashDanna md:text-base lg:text-lg">Accueil</a>
                     </li>
                     <li class="py-2 pl-3">
-                        <a href="services/" class="font-medium text-lg text-zinc-300 hover:text-white transition duration-300 ease-in-out md:text-base lg:text-lg">Services</a>
+                        <a href="../services/" class="font-medium text-lg text-zinc-300 hover:text-white transition duration-300 ease-in-out md:text-base lg:text-lg">Services</a>
                     </li>
                     <li class="md:py-2 relative">
                         <div class=" pl-3">
@@ -55,9 +55,9 @@
                         </div>
                         <div class="hidden absolute md:right-0 md:top-10 z-10 mt-2 w-56 origin-top-right rounded-md bg-navDanna shadow-lg ring-1 ring-flashDanna ring-opacity-50 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="menu-button" tabindex="-1">
                             <div class="py-1" role="none">
-                              <a href="demande-de-devis/" class="text-flashDanna block px-4 py-2 text-sm hover:bg-bodyDanna hover:text-green-500 transition duration-300 ease-in-out md:hidden" role="menuitem" tabindex="-1" id="menu-item-0">Obtenir un devis gratuit</a>
+                              <a href="../demande-de-devis/" class="text-flashDanna block px-4 py-2 text-sm hover:bg-bodyDanna hover:text-green-500 transition duration-300 ease-in-out md:hidden" role="menuitem" tabindex="-1" id="menu-item-0">Obtenir un devis gratuit</a>
                               <a href="tel:+33698118890" class="text-gray-300 block px-4 py-2 text-sm hover:bg-bodyDanna hover:text-white transition duration-300 ease-in-out" role="menuitem" tabindex="-1" id="menu-item-1">+33 6 98 11 88 90</a>
-                              <a href="contact/" class="text-gray-300 block px-4 py-2 text-sm hover:bg-bodyDanna hover:text-white transition duration-300 ease-in-out" role="menuitem" tabindex="-1" id="menu-item-2">Nous écrire</a>
+                              <a href="../contact/" class="text-gray-300 block px-4 py-2 text-sm hover:bg-bodyDanna hover:text-white transition duration-300 ease-in-out" role="menuitem" tabindex="-1" id="menu-item-2">Nous écrire</a>
                             </div>
                         </div>
                     </li>
@@ -89,13 +89,13 @@
                     <ul class="pt-2">
                         <li class="py-2">
                             <div class="flex space-x-4">
-                                <img src="assets/images/telephone-fill.svg" alt="Phone" class="w-5">
+                                <img src="../assets/images/telephone-fill.svg" alt="Phone" class="w-5">
                                 <a href="tel:+33698118890" class="text-gray-400 text-sm hover:text-white transition duration-200 ease-in-out">+33 6 98 11 88 90</a>
                             </div>
                         </li>
                         <li class="py-2">
                             <div class="flex space-x-4">
-                                <img src="assets/images/envelope-at-fill.svg" alt="envelope" class="w-5">
+                                <img src="../assets/images/envelope-at-fill.svg" alt="envelope" class="w-5">
                                 <a href="mailto:contact@dannacode.com" class="text-gray-400 text-sm hover:text-white transition duration-200 ease-in-out">contact@dannacode.com</a>
                             </div>
                         </li>
@@ -103,22 +103,22 @@
                             <div class="flex space-x-4 mb-4">
                                 <div class="w-10 h-10 rounded-full flex justify-center items-center transition duration-200 hover:scale-110 hover:bg-bodyDanna">
                                     <a href="" class="">
-                                        <img src="assets/images/facebook.svg" alt="" class="w-5">
+                                        <img src="../assets/images/facebook.svg" alt="" class="w-5">
                                     </a>
                                 </div>
                                 <div class="w-10 h-10 rounded-full flex justify-center items-center transition duration-200 hover:scale-110 hover:bg-bodyDanna">
                                 <a href="">
-                                    <img src="assets/images/instagram.svg" alt="" class="w-5">
+                                    <img src="../assets/images/instagram.svg" alt="" class="w-5">
                                 </a>
                                 </div>
                                 <div class="w-10 h-10 rounded-full flex justify-center items-center transition duration-200 hover:scale-110 hover:bg-bodyDanna">
                                     <a href="">
-                                        <img src="assets/images/linkedin.svg" alt="" class="w-5">
+                                        <img src="../assets/images/linkedin.svg" alt="" class="w-5">
                                     </a>
                                 </div>
                                 <div class="w-10 h-10 rounded-full flex justify-center items-center transition duration-200 hover:scale-110 hover:bg-bodyDanna">
                                 <a href="">
-                                    <img src="assets/images/twitter-x.svg" alt="" class="w-5">
+                                    <img src="../assets/images/twitter-x.svg" alt="" class="w-5">
                                 </a>
                                 </div>
                             </div>
@@ -127,23 +127,23 @@
                 </div>
                 <div class="order-1 ml-2 lg:flex lg:items-center lg:justify-center">
                     <a href="">
-                        <img src="assets/images/DannaCode.png" alt="" class="w-40 ">
+                        <img src="../assets/images/DannaCode.png" alt="" class="w-40 ">
                     </a>
                 </div>
                 <div class="order-3 my-5 ml-2 lg:text-right lg:mr-6">
                     <h5 class="font-bold text-gray-100 text-xl">Accès rapide</h5>
                     <ul>
                         <li class="my-2">
-                            <a href="services/" class="text-gray-400 text-base hover:text-gray-50 transition duration-200 ease-in-out">Services</a>
+                            <a href="../services/" class="text-gray-400 text-base hover:text-gray-50 transition duration-200 ease-in-out">Services</a>
                         </li>
                         <li class="my-2">
-                            <a href="contact/" class="text-gray-400 text-base hover:text-gray-50 transition duration-200 ease-in-out">Contact</a>
+                            <a href="../contact/" class="text-gray-400 text-base hover:text-gray-50 transition duration-200 ease-in-out">Contact</a>
                         </li>
                         <li class="my-2">
-                            <a href="demande-de-devis/" class="text-gray-400 text-base hover:text-gray-50 transition duration-200 ease-in-out">Demande de devis</a>
+                            <a href="../demande-de-devis/" class="text-gray-400 text-base hover:text-gray-50 transition duration-200 ease-in-out">Demande de devis</a>
                         </li>
                         <li class="mt-2">
-                            <a href="mentions-legales/" class="text-gray-400 text-base hover:text-gray-50 transition duration-200 ease-in-out">Mentions légales</a>
+                            <a href="../mentions-legales/" class="text-gray-400 text-base hover:text-gray-50 transition duration-200 ease-in-out">Mentions légales</a>
                         </li>
                     </ul>
                     
@@ -153,6 +153,6 @@
         <div class="py-4 w-full text-center">
             <p class="font-extralight text-sm text-gray-100 sm:text-base">&nbsp;Copyright&nbsp;&copy;&nbsp;DannaCode <script>document.write(new Date().getFullYear())</script> - <a href="mentions-legales/" class="text-gray-400 transition duration-100 ease-in-out hover:text-gray-100">Mentions légales</a></p>
         </div>
-      <script type="module" src="./assets/js/script.js"></script>
+      <script type="module" src="../assets/js/script.js"></script>
     </body>
 </html>
