--- a/contact/index.html
+++ b/contact/index.html
@@ -28,12 +28,12 @@
             <nav class="border-b border-gray-400 top-0 z-20 p-4 w-full grid grid-cols-none shadow-sm bg-navDanna md:max-w-8xl md:grid-cols-menu md:shadow-none md:relative md:mx-auto md:border-b-0">
                 
                 <div class="flex justify-between items-center md:justify-center">
-                    <a href="">
+                    <a href="..">
                         <img src="../assets/images/DannaCode.png" alt="Logo DannaCode" class="w-12">
                     </a>
                     <button class="logo-button icone-toggle bg-navDanna rounded-md p-2  ring-1 ring-flashDanna ring-opacity-20 md:hidden">
                         <span class="sr-only">Ouvrir le menu principal</span>
-                        <img src="../assets/images/menu.svg" alt="Icône hamberger" class="h-6 w-6 ">
+                        <img src="../assets/images/icon/menu.svg" alt="Icône hamberger" class="h-6 w-6 ">
                     </button>
                 </div>
 
@@ -42,7 +42,7 @@
                         <a href="" class="font-medium text-lg text-zinc-100 border-b-2 border-flashDanna md:text-base lg:text-lg">Accueil</a>
                     </li>
                     <li class="py-2 pl-3">
-                        <a href="../services/" class="font-medium text-lg text-zinc-300 hover:text-white transition duration-300 ease-in-out md:text-base lg:text-lg">Services</a>
+                        <a href="" class="font-medium text-lg text-zinc-300 hover:text-white transition duration-300 ease-in-out md:text-base lg:text-lg">Services</a>
                     </li>
                     <li class="md:py-2 relative">
                         <div class=" pl-3">
@@ -81,7 +81,7 @@
                 </div>
             </nav>
         </header>
-        
+  
         <footer class="bg-navDanna py-5 mt-auto border-y border-gray-400">
             <div class="grid grid-cols-1 max-w-xl mx-auto p-4 lg:grid-cols-3 lg:max-w-7xl md:py-10">
                 <div class="ml-2 mt-2 order-2 border-b-2 lg:border-0 lg:order-1 lg:ml-6">
@@ -89,13 +89,13 @@
                     <ul class="pt-2">
                         <li class="py-2">
                             <div class="flex space-x-4">
-                                <img src="../assets/images/telephone-fill.svg" alt="Phone" class="w-5">
+                                <img src="../assets/images/icon/telephone-fill.svg" alt="Phone" class="w-5">
                                 <a href="tel:+33698118890" class="text-gray-400 text-sm hover:text-white transition duration-200 ease-in-out">+33 6 98 11 88 90</a>
                             </div>
                         </li>
                         <li class="py-2">
                             <div class="flex space-x-4">
-                                <img src="../assets/images/envelope-at-fill.svg" alt="envelope" class="w-5">
+                                <img src="../assets/images/icon/envelope-at-fill.svg" alt="envelope" class="w-5">
                                 <a href="mailto:contact@dannacode.com" class="text-gray-400 text-sm hover:text-white transition duration-200 ease-in-out">contact@dannacode.com</a>
                             </div>
                         </li>
@@ -103,22 +103,22 @@
                             <div class="flex space-x-4 mb-4">
                                 <div class="w-10 h-10 rounded-full flex justify-center items-center transition duration-200 hover:scale-110 hover:bg-bodyDanna">
                                     <a href="" class="">
-                                        <img src="../assets/images/facebook.svg" alt="" class="w-5">
+                                        <img src="../assets/images/icon/facebook.svg" alt="" class="w-5">
                                     </a>
                                 </div>
                                 <div class="w-10 h-10 rounded-full flex justify-center items-center transition duration-200 hover:scale-110 hover:bg-bodyDanna">
                                 <a href="">
-                                    <img src="../assets/images/instagram.svg" alt="" class="w-5">
+                                    <img src="../assets/images/icon/instagram.svg" alt="" class="w-5">
                                 </a>
                                 </div>
                                 <div class="w-10 h-10 rounded-full flex justify-center items-center transition duration-200 hover:scale-110 hover:bg-bodyDanna">
                                     <a href="">
-                                        <img src="../assets/images/linkedin.svg" alt="" class="w-5">
+                                        <img src="../assets/images/icon/linkedin.svg" alt="" class="w-5">
                                     </a>
                                 </div>
                                 <div class="w-10 h-10 rounded-full flex justify-center items-center transition duration-200 hover:scale-110 hover:bg-bodyDanna">
                                 <a href="">
-                                    <img src="../assets/images/twitter-x.svg" alt="" class="w-5">
+                                    <img src="../assets/images/icon/twitter-x.svg" alt="" class="w-5">
                                 </a>
                                 </div>
                             </div>
@@ -126,15 +126,15 @@
                     </ul>
                 </div>
                 <div class="order-1 ml-2 lg:flex lg:items-center lg:justify-center">
-                    <a href="">
-                        <img src="../assets/images/DannaCode.png" alt="" class="w-40 ">
+                    <a href="..">
+                        <img src="../assets/images/DannaCode.png" alt="Logo DannaCode" class="w-40 lg:w-48">
                     </a>
                 </div>
                 <div class="order-3 my-5 ml-2 lg:text-right lg:mr-6">
                     <h5 class="font-bold text-gray-100 text-xl">Accès rapide</h5>
                     <ul>
                         <li class="my-2">
-                            <a href="../services/" class="text-gray-400 text-base hover:text-gray-50 transition duration-200 ease-in-out">Services</a>
+                            <a href="" class="text-gray-400 text-base hover:text-gray-50 transition duration-200 ease-in-out">Services</a>
                         </li>
                         <li class="my-2">
                             <a href="../contact/" class="text-gray-400 text-base hover:text-gray-50 transition duration-200 ease-in-out">Contact</a>
@@ -151,7 +151,7 @@
             </div>
         </footer>
         <div class="py-4 w-full text-center">
-            <p class="font-extralight text-sm text-gray-100 sm:text-base">&nbsp;Copyright&nbsp;&copy;&nbsp;DannaCode <script>document.write(new Date().getFullYear())</script> - <a href="mentions-legales/" class="text-gray-400 transition duration-100 ease-in-out hover:text-gray-100">Mentions légales</a></p>
+            <p class="font-extralight text-sm text-gray-100 sm:text-base">&nbsp;Copyright&nbsp;&copy;&nbsp;DannaCode <script>document.write(new Date().getFullYear())</script> - <a href="../mentions-legales/" class="text-gray-400 transition duration-100 ease-in-out hover:text-gray-100">Mentions légales</a></p>
         </div>
       <script type="module" src="../assets/js/script.js"></script>
     </body>
